# caramel

./: .gitignore  Cargo.toml  data.txt  input.txt  out.txt
core/: Cargo.toml
core/src/: error.rs  lib.rs
core/src/ast/: builder.rs  mod.rs  printer.rs  tree_printer.rs
core/src/ast/print/: mod.rs  printer.rs
core/src/llvm/: codegen.rs  context.rs  mod.rs
core/src/parse/: error.rs  macros.rs  mod.rs  op_info.rs  parser.rs  span.rs
core/src/parse/token/: keywords.rs  list.rs  mod.rs  type.rs
core/src/parse/token/tokenizer/: list_tokenizer.rs  live_tokenizer.rs  mock_tokenizer.rs  mod.rs  raw.rs
core/src/source/: error.rs  mod.rs  reader.rs
core/src/source/code_source/: mod.rs  source_file.rs  source_pos.rs  source_str.rs
meltc/: Cargo.toml
meltc/src/: cli.rs  main.rs
src/: main.rs
src/ast/: ast.rs  interpreter.rs  mod.rs  print.rs
src/ast/validate/: type.rs
src/parse/: ast.rs  ast_print.rs  mod.rs  parser.rs  span.rs  token.rs  tokenizer.rs
src/translate/: am.rs  mod.rs
test/: input.car
tests/: input.car
